# sgl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
contrib/: CMakeLists.txt
contrib/assimp/: CMakeLists.txt
contrib/glew/: CMakeLists.txt
contrib/stb_image/: CMakeLists.txt
docs/: index.md
sgl/: CMakeLists.txt
sgl/include/: macro.h  sgl.h
sgl/include/context_lock/: context_lock.h
sgl/include/font/: font.h
sgl/include/math/: bound.h
sgl/include/model/: model.h
sgl/include/object/: buffers.h  gl_object.h  render_obj.h  render_target.h  shapes.h  sprite.h  text.h  texture.h
sgl/include/shaders/: lighting.h  render_shader.h  shaders.h
sgl/include/utils/: error.h
sgl/include/window/: codes.h  window.h
sgl/src/: defaults.h  error.cpp  gtexture.cpp  help.cpp  help.h  model.cpp  render.cpp  render_shader.cpp  shaders.cpp  shapes.cpp  sprite.cpp  text.cpp  texture.cpp  window.cpp
src/: CMakeLists.txt
src/sgl/: CMakeLists.txt
src/sgl/include/math/: mat.h  numerics.h  rational.h  vec.h
src/sgl/include/object/: camera.h  gtexture.h  render_obj.h  shape_data.h  shapes.h  sprite.h  text.h
src/sgl/include/shaders/: render_shader.h  shaders.h
src/sgl/include/utils/: timer.h
src/sgl/include/window/: codes.h  window.h
src/sgl/src/: defaults.cpp  render.cpp  shaders.cpp  shapes.cpp  sprite.cpp  text.cpp  window.cpp
src/testing/: CMakeLists.txt
src/testing/shapes/: CMakeLists.txt
src/testing/shapes/src/: main.cpp
src/testing/src/: main.cpp  shapes_test.txt  text_test.txt
src/testing/text/src/: main.cpp
src/testing/work/: CMakeLists.txt
testing/: CMakeLists.txt
testing/assets/: error.txt  truck.mtl
testing/lighting/: CMakeLists.txt
testing/lighting/src/: main.cpp
testing/model/: CMakeLists.txt
testing/model/src/: main.cpp
testing/shapes/: CMakeLists.txt
testing/shapes/src/: main.cpp
testing/sprite/: CMakeLists.txt
testing/sprite/src/: main.cpp
testing/text/: CMakeLists.txt
testing/text/src/: main.cpp
testing/work/: CMakeLists.txt
testing/work/src/: main.cpp
